--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
-    android:layout_height="230dp"
+    android:layout_height="280dp"
     android:layout_marginTop="20dp"
 
     app:cardBackgroundColor="#FFFFFF"
@@ -15,18 +15,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/border"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageitem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             android:layout_marginTop="30dp"
             tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="442dp"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
@@ -35,14 +36,14 @@
             android:layout_width="115dp"
             android:layout_height="40dp"
             android:layout_marginLeft="80dp"
-            android:layout_marginTop="170dp"
+            android:layout_marginTop="210dp"
 
-            android:fontFamily="sans-serif-smallcaps"
+            android:fontFamily="@font/abril_fatface"
             android:gravity="center"
             android:text="City"
-            android:textColor="#1A1606"
-            android:textSize="22dp"
-            android:textStyle="bold" />
+            android:textAllCaps="true"
+            android:textColor="#43A047"
+            android:textSize="22dp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
