--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -19,10 +19,10 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/image1"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="30dp"
+            android:id="@+id/image2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 
@@ -32,7 +32,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvname"
+            android:id="@+id/name_mall"
             android:layout_width="115dp"
             android:layout_height="40dp"
             android:layout_marginLeft="80dp"
