--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -20,9 +20,9 @@
 
         <ImageView
             android:id="@+id/image2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginTop="30dp"
             tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 
@@ -40,7 +40,7 @@
 
             android:fontFamily="@font/abril_fatface"
             android:gravity="center"
-            android:text="City"
+            android:text="Mall"
             android:textAllCaps="true"
             android:textColor="#43A047"
             android:textSize="22dp" />
