--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -18,32 +18,45 @@
         android:background="@drawable/border"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/image1"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="30dp"
-            tools:srcCompat="@tools:sample/avatars" />
-    </LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="248dp"
+            android:layout_height="250dp"
+            app:cardBackgroundColor="#FFFFFF"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="15dp"
+            app:cardCornerRadius="25dp"
+            android:background="@drawable/border2"
+            app:cardElevation="1dp">
 
-    <LinearLayout
-        android:layout_width="442dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvname"
-            android:layout_width="115dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="210dp"
 
-            android:fontFamily="@font/abril_fatface"
-            android:gravity="center"
-            android:text="City"
-            android:textAllCaps="true"
-            android:textColor="#43A047"
-            android:textSize="22dp" />
+            <TextView
+                android:id="@+id/tvname"
+                android:layout_width="115dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="200dp"
+
+                android:fontFamily="@font/abril_fatface"
+                android:gravity="center"
+                android:text="City"
+                android:textAllCaps="true"
+                android:textColor="#43A047"
+                android:textSize="22dp" />
+
+            <ImageView
+                android:id="@+id/image1"
+
+                android:layout_width="250dp"
+                android:layout_height="190dp"
+
+                android:layout_marginTop="0dp"
+                android:scaleType="centerCrop"
+                app:cardCornerRadius="25dp"
+
+                tools:srcCompat="@tools:sample/avatars" />
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
