--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:layout_width="match_parent"
-    android:layout_height="280dp"
-    android:layout_marginTop="20dp"
+    android:layout_width="140dp"
+    android:layout_height="200dp"
 
+    android:layout_marginTop="20dp"
+    android:layout_marginLeft="4dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="25dp"
     app:cardElevation="10dp">
@@ -18,32 +19,38 @@
         android:background="@drawable/border"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/image2"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="30dp"
-            tools:srcCompat="@tools:sample/avatars" />
-    </LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:cardBackgroundColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            app:cardCornerRadius="25dp"
+            android:background="@drawable/border2"
+            app:cardElevation="1dp">
 
-    <LinearLayout
-        android:layout_width="442dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/name_mall"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="130dp"
 
-        <TextView
-            android:id="@+id/name_mall"
-            android:layout_width="115dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="210dp"
+                android:fontFamily="@font/abril_fatface"
+                android:gravity="center"
+                android:text="Mall"
+                android:textAllCaps="true"
+                android:textColor="#43A047"
+                android:textSize="15dp" />
 
-            android:fontFamily="@font/abril_fatface"
-            android:gravity="center"
-            android:text="Mall"
-            android:textAllCaps="true"
-            android:textColor="#43A047"
-            android:textSize="22dp" />
+            <ImageView
+                android:id="@+id/image2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                tools:srcCompat="@tools:sample/avatars" />
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
