--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -21,33 +21,35 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
-            android:layout_height="120dp"
-            app:cardBackgroundColor="#FFFFFF"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            app:cardCornerRadius="25dp"
+            android:layout_height="160dp"
+            android:layout_marginLeft="7.5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/border2"
+            app:cardBackgroundColor="#FFFFFF"
+            app:cardCornerRadius="25dp"
             app:cardElevation="1dp">
 
             <TextView
                 android:id="@+id/name_mall"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="130dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="120dp"
 
                 android:fontFamily="@font/abril_fatface"
                 android:gravity="center"
                 android:text="Mall"
+
                 android:textAllCaps="true"
                 android:textColor="#43A047"
-                android:textSize="15dp" />
+                android:textSize="12dp" />
 
             <ImageView
                 android:id="@+id/image2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="130dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="0dp"
+                android:scaleType="centerCrop"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
 
