--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,22 +37,22 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
-        android:layout_marginStart="56dp"
-        android:layout_marginEnd="52dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="400dp"
+        android:layout_marginEnd="52dp"
         app:counterEnabled="true"
         app:counterMaxLength="16"
+        app:hintTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:passwordToggleTint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:hintTextColor="@color/white"
-        app:passwordToggleEnabled="true">
-
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/white">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -63,8 +63,7 @@
 
             android:inputType="textPassword"
             android:lines="1"
-            android:maxLength="16"
-             />
+            android:maxLength="16" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -76,12 +75,12 @@
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="164dp"
         android:background="@drawable/button_shape"
         android:text="Sign In"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.489"
 
         app:layout_constraintStart_toStartOf="parent" />
 
