--- a/app/src/main/res/layout/item3.xml
+++ b/app/src/main/res/layout/item3.xml
@@ -2,29 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:gravity="clip_horizontal
-">
+    android:gravity="clip_horizontal">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_height="101dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/border_item3"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="25dp">
 
-
         <TextView
             android:id="@+id/text_space"
-            android:layout_width="98dp"
-            android:layout_height="82dp"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="number park"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:text="1"
+            android:textSize="25dp"
+            />
 
+
+        <TextView
+            android:id="@+id/avalbvle"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:layout_marginTop="55dp"
+            android:gravity="center|bottom"
+            android:text="."
+            android:textColor="#43A047"
+            android:textSize="90dp"
+            android:textStyle="bold" />
+
+
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
