--- a/app/src/main/res/layout/item3.xml
+++ b/app/src/main/res/layout/item3.xml
@@ -5,11 +5,11 @@
     android:gravity="clip_horizontal">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
-        android:layout_height="101dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_width="110dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="15dp"
         android:background="@drawable/border_item3"
         android:gravity="center"
         android:orientation="vertical"
@@ -22,19 +22,18 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="1"
-            android:textSize="25dp"
-            />
+            android:textSize="25dp" />
 
 
         <TextView
             android:id="@+id/avalbvle"
             android:layout_width="match_parent"
-            android:layout_height="51dp"
-            android:layout_marginTop="55dp"
-            android:gravity="center|bottom"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-18dp"
+            android:gravity="center"
             android:text="."
             android:textColor="#43A047"
-            android:textSize="20dp"
+            android:textSize="90dp"
             android:textStyle="bold" />
 
 
