--- a/app/src/main/res/layout/activity_scan_page.xml
+++ b/app/src/main/res/layout/activity_scan_page.xml
@@ -7,7 +7,7 @@
     tools:context=".Scan_page">
 
     <Button
-        android:id="@+id/update"
+        android:id="@+id/scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="update"
