--- a/app/src/main/res/layout/activity_scan_page.xml
+++ b/app/src/main/res/layout/activity_scan_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Scan_page">
+    tools:context=".User.Scan_page">
 
     <Button
         android:id="@+id/scan"
