--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -3,7 +3,7 @@
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <stroke android:color="#28975F" android:width="1dp"></stroke>
+            <stroke android:color="@color/title" android:width="1dp"></stroke>
 
         </shape>
         </item>
