--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/back_login"
     tools:context=".Admin.MainActivity">
 
 
@@ -18,7 +18,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="335dp"
         android:layout_marginEnd="52dp"
-        app:hintTextColor="@color/white"
+        app:hintTextColor="@color/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -31,8 +31,7 @@
             android:hint="Email"
 
             android:inputType="textEmailAddress"
-            android:lines="1"
-             />
+            android:lines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -43,16 +42,16 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="410dp"
         android:layout_marginEnd="52dp"
         app:counterEnabled="true"
         app:counterMaxLength="16"
-        app:hintTextColor="@color/white"
+        app:hintTextColor="@color/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/white">
+        app:passwordToggleTint="@color/title">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -60,7 +59,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Password"
-
             android:inputType="textPassword"
             android:lines="1"
             android:maxLength="16" />
@@ -75,26 +73,25 @@
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="164dp"
+        android:layout_marginBottom="230dp"
         android:background="@drawable/button_shape"
         android:text="Sign In"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="198dp"
         android:layout_height="48dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="50dp"
         android:drawablePadding="10dp"
 
         android:fontFamily="sans-serif"
         android:gravity="center|center_vertical"
         android:text="Admin Login"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/title"
         android:textSize="28sp"
 
         android:textStyle="bold"
@@ -121,31 +118,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/register"
+        android:layout_width="124dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="207dp"
+        android:layout_marginTop="555dp"
+        android:gravity="center"
+        android:text="Register"
+        android:textColor="#76B599"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:hintTextColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
         android:id="@+id/textView10"
         android:layout_width="155dp"
         android:layout_height="42dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="588dp"
+        android:layout_marginTop="544dp"
         android:gravity="center"
         android:text="Don't have an Account ?"
         android:textColor="#7C7D7E"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="124dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="207dp"
-        android:layout_marginTop="599dp"
-        android:gravity="center"
-        android:text="Register"
-        app:hintTextColor="@color/white"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
