--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#28975F</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#28975F</color>
+    <color name="purple_500">#1A170B</color>
+    <color name="purple_700">#76B599</color>
+    <color name="teal_200">#76B599</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="title">#76B599</color>
+    <color name="title_2">#76B599</color>
+
+
+
 </resources>
