--- a/app/src/main/res/drawable/home.xml
+++ b/app/src/main/res/drawable/home.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M13,3L6,3v18h4v-6h3c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6zM13.2,11L10,11L10,7h3.2c1.1,0 2,0.9 2,2s-0.9,2 -2,2z"/>
+        android:pathData="M13,19h6L19,9.978l-7,-5.444 -7,5.444L5,19h6v-6h2v6zM21,20a1,1 0,0 1,-1 1L4,21a1,1 0,0 1,-1 -1L3,9.49a1,1 0,0 1,0.386 -0.79l8,-6.222a1,1 0,0 1,1.228 0l8,6.222a1,1 0,0 1,0.386 0.79L21,20z"/>
 </vector>
