--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_register"
+    android:background="@drawable/cities"
     tools:context=".Admin.Delete">
 
 
@@ -112,8 +112,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigationView"
         android:layout_width="match_parent"
+        android:layout_marginLeft="0.5dp"
         android:layout_height="wrap_content"
-        app:itemBackground="@color/title"
+        android:background="@drawable/round"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
