--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -1,148 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+        android:background="@drawable/back_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_login"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".Admin.MainActivity">
 
+    <ImageView
+        android:id="@+id/header_icon"
+        android:layout_width="@dimen/image_header_dimen"
+        android:layout_height="@dimen/image_header_dimen"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/image_header_top_margin"
+        android:src="@drawable/mmmmmm" />
 
-    <com.google.android.material.textfield.TextInputLayout
-
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+    <RelativeLayout
+        android:id="@+id/login_container"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/header_icon">
 
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="335dp"
-        android:layout_marginEnd="52dp"
-        app:hintTextColor="@color/title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="30dp"
+    app:cardCornerRadius="30dp"
+    app:cardElevation="0dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/City_Delete"
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Email"
-
-            android:inputType="textEmailAddress"
-            android:lines="1" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="410dp"
-        android:layout_marginEnd="52dp"
-        app:counterEnabled="true"
-        app:counterMaxLength="16"
-        app:hintTextColor="@color/title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/title">
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:padding="25dp"
+        android:background="@drawable/custom_edittext">
 
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:lines="1"
-            android:maxLength="16" />
+            android:layout_height="wrap_content"
+            android:text="Login Admin"
+            android:textSize="35sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/title"/>
 
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            app:hintTextColor="@color/title"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="15dp"
 
 
-    <Button
-        android:id="@+id/signIn"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="230dp"
-        android:background="@drawable/button_shape"
-        android:text="Sign In"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="parent" />
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/Email"
+                android:layout_width="270dp"
+                android:layout_height="45dp"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:lines="1"
+                android:drawableStart="@drawable/custom_email_icon"
+                android:drawablePadding="10dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="198dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="50dp"
-        android:drawablePadding="10dp"
 
-        android:fontFamily="sans-serif"
-        android:gravity="center|center_vertical"
-        android:text="Admin Login"
-        android:textColor="@color/title"
-        android:textSize="28sp"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            app:counterEnabled="true"
+            app:counterMaxLength="16"
+            android:layout_marginTop="8dp"
+            app:hintTextColor="@color/title"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/title">
 
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="177dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="112dp"
-        android:drawablePadding="10dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="270dp"
+                android:layout_height="45dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:lines="1"
+                android:maxLength="16"
+                android:drawableStart="@drawable/custom_lock"
+                android:drawablePadding="8dp"
+                />
 
-        android:fontFamily="sans-serif"
-        android:gravity="center|center_vertical"
-        android:text="Add your details to login"
-        android:textColor="#7C7D7E"
 
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="124dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="207dp"
-        android:layout_marginTop="555dp"
-        android:gravity="center"
-        android:text="Register"
-        android:textColor="#76B599"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:hintTextColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="155dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="544dp"
-        android:gravity="center"
-        android:text="Don't have an Account ?"
-        android:textColor="#7C7D7E"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/signIn"
+            android:layout_width="270dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/button_shape"
+            android:gravity="center"
+            android:layout_marginStart="5dp"
+            android:text="Sign In"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="75dp"
+            android:gravity="center"
+            android:text="Register"
+            android:textColor="#76B599"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:padding="8dp"
+            android:layout_gravity="center"
+            app:hintTextColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_gravity="left"
+            android:layout_marginTop="-37dp"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="Don't have an Account?"
+            android:textColor="#7C7D7E"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="15sp"/>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
+    </RelativeLayout>
+
+</LinearLayout>
