--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,20 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_splash_screen"
+    android:background="@drawable/back_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    >
 
     <ImageView
         android:id="@+id/header_icon"
-        android:layout_width="145dp"
-        android:layout_height="148dp"
+        android:layout_alignParentTop="true"
+        android:layout_width="@dimen/image_header_dimen"
+        android:layout_height="@dimen/image_header_dimen"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/image_header_top_margin"
+        android:layout_marginTop="-19.5dp"
         android:src="@drawable/mmmmmm" />
+
 
 
 </RelativeLayout>
